partman-crypto (25) UNRELEASED; urgency=low

  * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
  * Move crypto-tools.sh to ./lib/crypto-base.
  * finish.d/crypto_config: fix script error when $tmp is empty.

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 16:36:52 +0100

partman-crypto (24) unstable; urgency=low

  [ Max Vozeler ]
  * Use veto_filesystems to allow only ext2 on crypto devices with random
    keys. This is only effective with partman-basicmethods 36 or later.
    Closes: #414638.
  * Replace code to commit partman changes to disk with call to
    commit_changes from partman-base (>= 113) and version the dependency
    accordingly.

  [ Frans Pop ]
  * Rename functions dev_wipe and wipe to be in crypto namespace.
  * Remove progresscancel capability again after erase progress bar to avoid
    all following progress bars to become cancelable as well. Ensure backup
    capability is retained.

  [ Updated translations ]
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 13:18:55 +0100

partman-crypto (23) unstable; urgency=low

  [ Colin Watson ]
  * Reduce noise from repeated 'debian/rules clean' runs.

  [ Max Vozeler ]
  * Correct dependencies in base64/Makefile; Thanks to 
    Robert Millan for report + patch. Closes: #452830
  * Drop use of the obsolete /dev/loop/ directory
  * Make erase cancellable. Closes: #381898, #400034

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * Italian (it.po) by Stefano Canepa
  * Korean (ko.po) by Sunjae Park
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovak (sk.po) by Ivan Masár

 -- Max Vozeler <xam@debian.org>  Sun, 25 Nov 2007 17:01:43 +0100

partman-crypto (22) unstable; urgency=low

  [ Frans Pop ]
  * For hd-media installs the module loop will already be loaded, which