@@ -3,8 +3,9 @@ partman-crypto (25) UNRELEASED; urgency=low
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
   * Move crypto-tools.sh to ./lib/crypto-base.
   * finish.d/crypto_config: fix script error when $tmp is empty.
+  * crypto-base.sh: use new memfree function from base.sh.
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 16:36:52 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 16:56:43 +0100
 
 partman-crypto (24) unstable; urgency=low
 
